<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PriviewStudentDialog</class>
 <widget class="QDialog" name="PriviewStudentDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>640</width>
    <height>480</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">
/* === QLineEdit –ø–æ–ª—è === */
QLineEdit {
    background-color: #ffffff;
    border: 1px solid #cccccc;
    border-radius: 6px;
    padding: 6px 8px;
    selection-background-color: #a8d0ff;
}

/* === QTextEdit === */
QTextEdit {
    background-color: #ffffff;
    border: 1px solid #cccccc;
    border-radius: 6px;
    padding: 6px;
    selection-background-color: #a8d0ff;
}

/* === QPushButton === */
QPushButton {
    background-color: #4a90e2;
    color: white;
    border: none;
    border-radius: 6px;
    padding: 8px 16px;
}

QPushButton:hover {
    background-color: #357abd;
}

QPushButton:pressed {
    background-color: #2a5d9f;
}

/* === QDialogButtonBox –∫–Ω–æ–ø–∫–∏ === */
QDialogButtonBox QPushButton {
    min-width: 80px;
}

/* === QLabels === */
QLabel {
    font-weight: 500;
}

/* === QLineEdit –ø–æ–ª—è (—Ç—ë–º–Ω–∞—è —Ç–µ–º–∞) === */
QLineEdit {
    background-color: #2b2b2b;    /* —Ç—ë–º–Ω—ã–π —Ñ–æ–Ω */
    color: #ffffff;               /* –±–µ–ª—ã–π —Ç–µ–∫—Å—Ç */
    border: 1px solid #555555;    /* —Ç—ë–º–Ω–∞—è –≥—Ä–∞–Ω–∏—Ü–∞ */
    border-radius: 6px;
    padding: 6px 8px;
    selection-background-color: #4a90e2; /* —Ü–≤–µ—Ç –≤—ã–¥–µ–ª–µ–Ω–∏—è */
    selection-color: #ffffff;             /* —Ü–≤–µ—Ç —Ç–µ–∫—Å—Ç–∞ –ø—Ä–∏ –≤—ã–¥–µ–ª–µ–Ω–∏–∏ */
}

/* === –≠—Ñ—Ñ–µ–∫—Ç –ø—Ä–∏ —Ñ–æ–∫—É—Å–µ === */
QLineEdit:focus {
    border: 2px solid #4a90e2;
    outline: none;
}
QTextEdit{
border: 2px solid #4a90e2;
  outline: none;
    background-color: #2b2b2b;    /* —Ç—ë–º–Ω—ã–π —Ñ–æ–Ω */
    color: #ffffff;               /* –±–µ–ª—ã–π —Ç–µ–∫—Å—Ç */
    border: 1px solid #555555;    /* —Ç—ë–º–Ω–∞—è –≥—Ä–∞–Ω–∏—Ü–∞ */
    border-radius: 6px;
    padding: 6px 8px;
    selection-background-color: #4a90e2; /* —Ü–≤–µ—Ç –≤—ã–¥–µ–ª–µ–Ω–∏—è */
    selection-color: #ffffff;    
}
</string>
  </property>
  <widget class="QPushButton" name="btnOk">
   <property name="geometry">
    <rect>
     <x>330</x>
     <y>310</y>
     <width>90</width>
     <height>29</height>
    </rect>
   </property>
   <property name="text">
    <string>Ok</string>
   </property>
  </widget>
  <widget class="QPushButton" name="btnClose">
   <property name="geometry">
    <rect>
     <x>450</x>
     <y>310</y>
     <width>90</width>
     <height>29</height>
    </rect>
   </property>
   <property name="text">
    <string>Close</string>
   </property>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>36</y>
     <width>541</width>
     <height>261</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLineEdit" name="lineEditFile_ManagerStudent_">
      <property name="placeholderText">
       <string>–§–∞–π–ª —Å–æ —Å—Ç—É–¥–µ–Ω–∞—Ç–∞–º–∏ –¥–ª—è –ø—Ä–µ–¥—Å—Ç–∞–≤–ª–µ–Ω–∏—è</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QTextEdit" name="textEdit"/>
    </item>
    <item>
     <widget class="QPushButton" name="btnBrowse">
      <property name="text">
       <string>üìÇ–í—ã–±—Ä–∞—Ç—å</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
